--- a/index.html
+++ b/index.html
@@ -1,47 +1,20 @@
 <!DOCTYPE HTML>
-<!--
-	Escape Velocity by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>TRANSFORMS</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.dropotron.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		<link rel="stylesheet" href="transforms.css" />
 	</head>
-	<body class="no-sidebar">
-
-		<div id="header-wrapper" class="wrapper">
-			<div id="header">				
-				<div id="logo">
-					<h1><a href="index.html">TRANSFORMS</a></h1>
-				</div>
-			</div>
-		</div>
-		
-		<!-- Main -->
-		<div class="wrapper style2">
-			<div class="title">Content</div>
-			<div id="main" class="container">						
-				<div id="content">
-				<!-- TODO -->
-				</div>
+	<body>
+		<div class="original">
+			<div class="spin">
+				<figure class="box box-1">Box 1</figure>
 			</div>
 		</div>
 
+		<div class="original">
+			<div class="spin">
+				<figure class="box box-2">Box 2</figure>
+			</div>
+		</div>
 	</body>
 </html>
